--- a/css/main.css
+++ b/css/main.css
@@ -2,21 +2,66 @@
 	background: #f8f8f8;
 }
 
+/* Edit default properties*/
 footer {
 	bottom: 0;
 }
 
-#wrap {min-height: 80%;}
+/* Page specific Properties */
 
-#vspace {
-  overflow:auto;
-  padding-bottom:5%; /* this needs to be bigger than footer height*/
+.default-banner{
+	margin-top: 50px;
+
+	background-image: url(../img/default_banner.jpg);
+	background-position: 0% 25%;
+	background-size: cover;
+	background-repeat: no-repeat;
+
+	padding-top: 40px;
+	padding-bottom: 80px;
+	color: white;
+	text-shadow: black 0.3em 0.3em 0.3em;
+}
+#aboutjumbotron {
+	margin-top: 80px;
+
+	background-image: url(../img/NYnight_adj2.jpg);
+	background-position: 0% 25%;
+	background-size: cover;
+	background-repeat: no-repeat;
+
+	padding-top: 80px;
+	padding-bottom: 80px;
+	color: white;
+	text-shadow: black 0.3em 0.3em 0.3em;
 }
 
+
+#abouttext{
+	padding-top: 60px;
+}
+
+#aboutbodycontainer {
+	padding-top: 10px;
+}
+
+
+
+/* Global Page properties */
+
+
+#vspace {
+	overflow:auto;
+	padding-bottom:5%; /* this needs to be bigger than footer height*/
+}
+
+
+#wrap {min-height: 80%;}
+
 .section-footing-spacer {
-  border-top: 3px solid #e7e7e7;
-  width: 300px;
-  float: left;
+	border-top: 3px solid #e7e7e7;
+	width: 300px;
+	float: left;
 }
 
 /* Makes sure that page header is spaced right*/
